# spresense-rs

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  cxd5602-fixed.svd  cxd5602.svd.patched  justfile  lib.rs  memory.x  patch.yml  transform.chiptool.yaml
.github/workflows/: ci.yml
cxd56-blink-debug/: Cargo.toml  README.md
cxd56-blink-debug/src/: lib.rs
cxd56-hal/: Cargo.toml
cxd56-hal/src/: adc.rs  async_delay.rs  audio_aca.rs  critical_section_impl.rs  delay.rs  delay_alt.rs  farapi.rs  gnss.rs  gpio.rs  i2c.rs  i2c_alt.rs  i2s_alt.rs  interrupt.rs  lib.rs  pmic.rs  pwbimu.rs  regs.rs  spi_alt.rs  timer.rs  uart.rs  uart_alt.rs  watchdog.rs
cxd56-hal/src/clocks/: audio.rs  buses.rs  gate.rs  mod.rs  peripheral.rs  pm.rs  pmu.rs  profile.rs  reset.rs  sources.rs
cxd56-hal/src/multicore/: mod.rs  spawn.rs  sph.rs
cxd56-hal/src/time/: mod.rs  rtc.rs  timer.rs
cxd56-pac/: Cargo.toml  README.md
cxd56-pac-chiptool/: Cargo.toml  README.md  build.rs  device.x
cxd56-pac-chiptool/src/: ADDRCONV.rs  CISIF.rs  CPU_FIFO.rs  CRG.rs  DMAC1.rs  DMAC3.rs  GE2D.rs  GPIO0.rs  I2C0.rs  ROT.rs  RTC0.rs  SCU_ADCIF.rs  SMP_RAM_CTRL.rs  SPI0.rs  SPI4.rs  TIMER0.rs  TOPREG.rs  TOPREG_SUB.rs  UART1.rs  UART2.rs  WDOG.rs  _vectors.rs  lib.rs
cxd56-pac-chiptool/src/ADDRCONV/: regs.rs
cxd56-pac-chiptool/src/CISIF/: regs.rs  vals.rs
cxd56-pac-chiptool/src/CPU_FIFO/: regs.rs  vals.rs
cxd56-pac-chiptool/src/CRG/: regs.rs  vals.rs
cxd56-pac-chiptool/src/DMAC1/: regs.rs  vals.rs
cxd56-pac-chiptool/src/DMAC3/: regs.rs  vals.rs
cxd56-pac-chiptool/src/GE2D/: regs.rs  vals.rs
cxd56-pac-chiptool/src/GPIO0/: regs.rs
cxd56-pac-chiptool/src/I2C0/: regs.rs
cxd56-pac-chiptool/src/ROT/: regs.rs  vals.rs
cxd56-pac-chiptool/src/RTC0/: regs.rs
cxd56-pac-chiptool/src/SCU_ADCIF/: regs.rs
cxd56-pac-chiptool/src/SMP_RAM_CTRL/: regs.rs  vals.rs
cxd56-pac-chiptool/src/SPI0/: regs.rs  vals.rs
cxd56-pac-chiptool/src/SPI4/: regs.rs  vals.rs
cxd56-pac-chiptool/src/TIMER0/: regs.rs
cxd56-pac-chiptool/src/TOPREG/: regs.rs
cxd56-pac-chiptool/src/TOPREG_SUB/: regs.rs
cxd56-pac-chiptool/src/UART1/: regs.rs  vals.rs
cxd56-pac-chiptool/src/UART2/: regs.rs  vals.rs
cxd56-pac-chiptool/src/WDOG/: regs.rs
cxd56-pac-svd2rust/: Cargo.toml  README.md  device.x  memory.x
cxd56-pac-svd2rust/src/: addrconv.rs  audio.rs  cisif.rs  cpu_fifo.rs  crg.rs  dmac1.rs  dmac3.rs  ge2d.rs  generic.rs  gpio0.rs  lib.rs  rot.rs  scu_adcif.rs  smp_ram_ctrl.rs  sph.rs  spi0.rs  spi4.rs  topreg.rs  topreg_sub.rs  uart1.rs  uart2.rs
cxd56-pac/src/: lib.rs
cxd56-template/: Cargo.toml  README.md  cargo-generate.toml
cxd56-template/.cargo/: config.toml
cxd56-template/src/: main.rs
cxd56xx-chiptool-pac/: Cargo.toml  device.x  lib.rs
cxd56xx-chiptool-pac/src/: _vectors.rs  addrconv.rs  cisif.rs  common.rs  cpu_fifo.rs  crg.rs  dmac1.rs  dmac3.rs  ge2d.rs  lib.rs  rot.rs  smp_ram_ctrl.rs  spi0.rs  spi4.rs  uart1.rs  uart2.rs
embassy-cxd56/: Cargo.toml
embassy-cxd56/src/: clock.rs  gpio.rs  lib.rs  uart.rs
examples/rust_adc_read/: Cargo.toml
examples/rust_blink/: Cargo.toml
examples/rust_blink_chiptool/: Cargo.toml  memory.x
examples/rust_blink_chiptool/src/: main.rs
examples/rust_blink_embassy/: Cargo.toml  memory.x
examples/rust_blink_hal/: Cargo.toml
examples/rust_blink_hal/src/: main.rs
examples/rust_blink_leds/: Cargo.toml
examples/rust_burn_sine/: Cargo.toml  build.rs  memory.x
examples/rust_burn_sine/.cargo/: config.toml
examples/rust_burn_sine/src/: lib.rs
examples/rust_critical_section/: Cargo.toml
examples/rust_critical_section/src/: main.rs
examples/rust_echo/: Cargo.toml  README.md
examples/rust_embassy_time/: Cargo.toml
examples/rust_embassy_time/src/: main.rs
examples/rust_gnss/: Cargo.toml
examples/rust_gpio_wait/: Cargo.toml
examples/rust_gpio_wait/src/: main.rs
examples/rust_gpio_wait_lp/: Cargo.toml
examples/rust_gpio_wait_lp/src/: main.rs
examples/rust_hello_defmt/: Cargo.toml  README.md
examples/rust_hello_defmt/.cargo/: config.toml
examples/rust_hello_defmt/src/: main.rs
examples/rust_hello_uart/: Cargo.toml  README.md
examples/rust_hello_uart_alt/: Cargo.toml
examples/rust_hello_uart_embassy/: Cargo.toml
examples/rust_hello_uart_embassy/src/: main.rs
examples/rust_i2c_lis2mdl/: Cargo.toml
examples/rust_i2c_scan/: Cargo.toml
examples/rust_i2s0/: Cargo.toml
examples/rust_i2s0_loopback/: Cargo.toml
examples/rust_interrupt/: Cargo.toml
examples/rust_multicore_blink/: Cargo.toml
examples/rust_pwbimu1/: Cargo.toml
examples/rust_sd_spi/: Cargo.toml
examples/rust_timer_hal/: Cargo.toml
examples/rust_timer_hal/src/: main.rs
examples/rust_uart2_gear/: Cargo.toml
examples/rust_uart_split/: Cargo.toml  README.md
examples/rust_watchdog_hal/: Cargo.toml
spresense-bsp/: Cargo.toml
spresense-bsp/src/: led.rs  lib.rs  pwbimu.rs
spresense-flash-algorithm/: Cargo.toml  link.x  template.yaml
spresense-flash-algorithm/src/: main.rs
src/: addrconv.rs  cisif.rs  cpu_fifo.rs  dmac3.rs  ge2d.rs  lib.rs  rot.rs  spi4.rs
svd/: cxd5602.svd.patched  patch.yml
tests/: README.md
tests/clock_perf/: Cargo.toml  README.md
tests/clock_perf/src/: main.rs
tests/embassy_time/: Cargo.toml
tests/embassy_time/.cargo/: config.toml
tests/embassy_time/src/: lib.rs
tests/embassy_time/tests/: time.rs
tests/gpio_levels/: Cargo.toml  README.md
tests/gpio_levels/.cargo/: config.toml
tests/gpio_levels/src/: lib.rs
tests/gpio_levels/tests/: gpio.rs
tests/gpio_levels_embassy/: Cargo.toml  README.md
tests/gpio_levels_embassy/src/: lib.rs
tests/gpio_levels_embassy/tests/: gpio.rs
tests/uart_peripheral/: Cargo.toml  README.md
tests/uart_peripheral/.cargo/: config.toml
tests/uart_peripheral/src/: main.rs
tools/cargo-spresense-flash/: Cargo.toml
tools/cargo-spresense-flash/src/: main.rs  monitor.rs  port.rs  test.rs
tools/flash-writer/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE
tools/flash-writer/src/: lib.rs  main.rs  nash.rs  serial.rs  xmodem.rs
xtask/: Cargo.toml
(+432 files in other folders)
