[workspace]
members = ["cxd56-pac", "examples/*", "tools/*"]

[package]
name = "spresense"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = { version = "1.2.0", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]