[package]
name = "cxd56-hal"
version = "0.1.0"
edition = "2024"

[features]
default = ["rt"]
rt = ["cxd56-pac-svd2rust/rt"]
critical-section = ["cxd56-pac-svd2rust/critical-section"]

[dependencies]
cxd56-pac-svd2rust = { version = "0.1.0", path = "../cxd56-pac-svd2rust" }
cortex-m = "0.7.7"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-io = "0.7"
fugit = "0.3"
critical-section = "1"
arm-pl011-uart = "0.5.0"
thiserror = { version = "2", default-features = false }
arm-sp805 = "0.2.0"
