[package]
name = "cxd56-hal"
version = "0.1.0"
edition = "2024"

[features]
default = ["rt", "async-delay-rtc"]
rt = ["cxd56-pac-svd2rust/rt"]
critical-section = ["cxd56-pac-svd2rust/critical-section"]
# Installs a multicore-safe critical_section::Impl using SPH 15.
# Mutually exclusive with cortex-m/critical-section-single-core (or any other
# set_impl!) in the same binary — the linker will error on duplicate symbols.
critical-section-impl = ["critical-section/restore-state-u8"]
# Backing peripheral for `async_delay` (the interrupt-driven async tick delay).
# Exactly one must be enabled; RTC0 alarm 0 is the perf-invariant default. A
# future `async-delay-timer` (SP804) backing slots in behind the same seam.
async-delay-rtc = []

[dependencies]
cxd56-pac-svd2rust = { version = "0.1.0", path = "../cxd56-pac-svd2rust" }
cortex-m = "0.7.7"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-io = "0.7"
fugit = "0.3"
critical-section = "1"
arm-pl011-uart = "0.5.0"
thiserror = { version = "2", default-features = false }
arm-sp805 = "0.2.0"
