[package]
name = "cxd56-hal"
version = "0.1.0"
edition = "2024"

[features]
default = ["rt", "time-driver-rtc"]
rt = ["cxd56-pac-svd2rust/rt"]
critical-section = ["cxd56-pac-svd2rust/critical-section"]
# Installs a multicore-safe critical_section::Impl using SPH 15.
# Mutually exclusive with cortex-m/critical-section-single-core (or any other
# set_impl!) in the same binary — the linker will error on duplicate symbols.
critical-section-impl = ["critical-section/restore-state-u8"]
# Backing peripheral for `async_delay` (the interrupt-driven async tick delay).
# Exactly one must be enabled (selected like embassy's `time-driver-*`):
#   * `async-delay-rtc`   — RTC0 alarm 0: perf-invariant, always-on, 32.768 kHz
#     (~30.5 µs granularity). The default; right for low-power work.
#   * `async-delay-timer` — SP804 TIMER0: perf-dependent (CPU base clock, sub-µs
#     resolution) but rescales with the operating point. The base clock must be
#     sampled via `async_delay::init`/`Delay::new` before first use.
# Async-time backend. Enable EXACTLY ONE (selected like embassy's `time-driver-*`).
# The `time-driver-*` pair implement `embassy_time_driver::Driver` (many concurrent
# `embassy_time::Timer`s via a software queue); the `async-delay-*` pair are the
# lighter hand-rolled single-in-flight `async_delay` path (no embassy dependency):
#   * `time-driver-rtc`   — embassy driver on RTC0 alarm 0: perf-invariant, always-on,
#     32.768 kHz, mapped 1:1 to `tick-hz-32_768` (~30.5 µs). The default.
#   * `time-driver-timer` — embassy driver on SP804 TIMER0/1: perf-dependent CPU base
#     clock, software-rescaled to `tick-hz-1_000_000` (~1 µs). `time::init` must sample
#     the base clock before first use, and the operating point must not change while the
#     driver is live (rate is fixed at init).
#   * `async-delay-rtc`   — hand-rolled single-in-flight delay on RTC0 alarm 0.
#   * `async-delay-timer` — hand-rolled single-in-flight delay on SP804 TIMER0.
time-driver-rtc = [
    "dep:embassy-time-driver",
    "dep:embassy-time-queue-utils",
    "embassy-time-driver/tick-hz-32_768",
    "embassy-time-queue-utils/generic-queue-64",
]
time-driver-timer = [
    "dep:embassy-time-driver",
    "dep:embassy-time-queue-utils",
    "embassy-time-driver/tick-hz-1_000_000",
    "embassy-time-queue-utils/generic-queue-64",
]
async-delay-rtc = []
async-delay-timer = []

[dependencies]
cxd56-pac-svd2rust = { version = "0.1.0", path = "../cxd56-pac-svd2rust" }
cortex-m = "0.7.7"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-io = "0.7"
fugit = "0.3"
critical-section = "1"
arm-pl011-uart = "0.5.0"
thiserror = { version = "2", default-features = false }
arm-sp805 = "0.2.0"
# embassy time-driver backends (`time-driver-*`). The HAL depends only on the driver
# trait + the software timer queue — not the app-facing `embassy-time` crate; apps bring
# `embassy-time` themselves with a matching `tick-hz-*` + `generic-queue-*`.
embassy-time-driver = { version = "0.2.2", optional = true }
embassy-time-queue-utils = { version = "0.3.2", optional = true }
