[package]
name = "cxd56-pac-chiptool"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
critical-section = "1.2.0"
defmt = { version = "1.1.0", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]
defmt = ["dep:defmt"]

[lints.clippy]
all = { level = "allow", priority = -1 }