[package]
name = "cxd56-pac"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
cxd56-pac-svd2rust = { path = "../cxd56-pac-svd2rust", optional = true }
cxd56-pac-chiptool = { path = "../cxd56-pac-svd2rust", optional = true }

[features]
default = ["svd2rust"]
svd2rust = ["dep:cxd56-pac-svd2rust"]
chiptool = ["dep:cxd56-pac-chiptool"]
# svd2pac  = ["dep:mychip-pac-svd2pac"]