[package]
name = "embassy-cxd56"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
cxd56-pac-chiptool = { path = "../cxd56-pac-chiptool" }
defmt = { version = "1.1.0", optional = true }
embassy-hal-internal = { version = "0.5.0", features = ["cortex-m", "prio-bits-3"] }

[features]
defmt = ["dep:defmt"]
