[package]
name = "spresense-bsp"
version = "0.1.0"
edition = "2024"
description = "Board support package for the Sony Spresense main board (CXD5602)"
license = "BSD-3-Clause"

[dependencies]
cxd56-hal          = { version = "0.1.0", path = "../cxd56-hal" }
cxd56-pac-svd2rust = { version = "0.1.0", path = "../cxd56-pac-svd2rust", features = ["critical-section"] }
embedded-hal       = "1.0.0"
hts221 = { version = "0.3.0", optional = true }
lis2mdl-rs = { version = "2.0.0", optional = true }
lps22hh-rs = { version = "2.0.0", optional = true }
lsm6dsox = { version = "2.1.0", optional = true }
sgp40 = "1.0.0"

[features]
default = []
pwbimu = []
rt      = ["cxd56-pac-svd2rust/rt"]
lsm6dsox = ["dep:lsm6dsox"]
lis2mdl-rs = ["dep:lis2mdl-rs"]
hts221 = ["dep:hts221"]
lps22hh-rs = ["dep:lps22hh-rs"]
