[package]
name = "rust_blink_chiptool"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
vcell = "0.1.3"
cxd56-pac-chiptool = { path = "../../cxd56-pac-chiptool" }
panic-halt = "1.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
