[package]
name = "rust_critical_section"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
# critical-section-impl installs the SPH-based impl; drop cortex-m's
# single-core impl to avoid a duplicate set_impl! linker error.
cortex-m    = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
cxd56-hal   = { path = "../../cxd56-hal", features = ["rt", "critical-section", "critical-section-impl"] }
critical-section = "1"
embedded-hal = "1.0.0"
panic-halt  = "1.0.0"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
