[package]
name = "rust_embassy_time"
version = "0.1.0"
edition = "2024"

[workspace]

# embassy-time driver backend, mirroring the HAL's `time-driver-*` features.
#   default (RTC):   cargo run --release
#   SP804 TIMER:     cargo run --release --no-default-features --features time-timer
#   low power:       add `--features low-power` (drops to the LP operating point first)
# The backend's embassy tick rate must match the HAL: tick-hz-32_768 (RTC, 1:1) or
# tick-hz-1_000_000 (SP804, software-rescaled from the perf-dependent base clock).
[features]
default = ["time-rtc"]
time-rtc = ["cxd56-hal/time-driver-rtc", "embassy-time/tick-hz-32_768"]
time-timer = ["cxd56-hal/time-driver-timer", "embassy-time/tick-hz-1_000_000"]
low-power = []

[dependencies]
cortex-m    = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cxd56-hal   = { path = "../../cxd56-hal", default-features = false, features = ["rt", "critical-section"] }
# Only the driver trait + queue are in the HAL; the app brings `embassy-time` itself.
# generic-queue-64: a fixed software queue that works with any waker (this example's
# in-file `block_on`, and any executor that does not use embassy's integrated timers).
embassy-time = { version = "0.5.1", default-features = false, features = ["generic-queue-64"] }
panic-halt  = "1.0.0"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
