[package]
name = "rust_gpio_wait"
version = "0.1.0"
edition = "2024"

[workspace]

# Async-delay backing, mirroring the HAL's `async-delay-*` features. Build the
# default (RTC) with `cargo build --release`; build the SP804 TIMER variant with
#   cargo build --release --no-default-features --features backing-timer
[features]
default = ["backing-rtc"]
backing-rtc = ["cxd56-hal/async-delay-rtc"]
backing-timer = ["cxd56-hal/async-delay-timer"]

[dependencies]
cortex-m    = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cxd56-hal   = { path = "../../cxd56-hal", default-features = false, features = ["rt", "critical-section"] }
panic-halt  = "1.0.0"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
