[package]
name = "clock_perf"
version = "0.1.0"
edition = "2024"

# Standalone workspace so this test crate builds independently of the repo
# workspace (same convention as examples/* and the other tests/*).
[workspace]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = 2
panic = "abort"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cxd56-hal = { version = "0.1.0", path = "../../cxd56-hal", features = ["rt", "critical-section"] }
defmt = "1.1.0"
defmt-serial = "0.13"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
