[package]
name = "embassy_time_test"
version = "0.1.0"
edition = "2024"

# Standalone workspace so this test crate builds independently of the repo
# workspace (same convention as examples/* and tests/gpio_levels).
[workspace]

# defmt-test integration test, run with `cargo test --release --test time`.
# harness = false: the binary provides its own entry via the #[tests] macro.
[[test]]
name = "time"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = 2
panic = "abort"

# embassy-time driver backend, mirroring the HAL's `time-driver-*` features. Run the
# default (RTC) with `cargo test --release --test time`; run the SP804 TIMER variant
# with `--no-default-features --features time-timer`; add `--features low-power` to
# run at the LP operating point (timings must match HP under either backend).
[features]
default = ["time-rtc"]
time-rtc = ["cxd56-hal/time-driver-rtc", "embassy-time/tick-hz-32_768"]
time-timer = ["cxd56-hal/time-driver-timer", "embassy-time/tick-hz-1_000_000"]
low-power = []

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cxd56-hal = { version = "0.1.0", path = "../../cxd56-hal", default-features = false, features = ["rt", "critical-section"] }
embassy-time = { version = "0.5.1", default-features = false, features = ["generic-queue-64"] }
defmt = "1.1.0"
defmt-serial = "0.13"
defmt-test = "0.5.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
