[package]
name = "cargo-spresense-flash"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand to build and flash Rust binaries to a Sony Spresense board"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cargo-spresense-flash"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
cargo_metadata = "0.23.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
env_logger = "0.11.10"
log = "0.4.29"
mkspk = { path = "../mkspk" }
flash-writer = { path = "../flash-writer" }
serialport = "4"
